tests/NormalTests/paczka1/small_fuzzy/82375497.err
Error in line 9: sHIsCeYNv S648 7,33
Error in line 6: sHIsCeYNv A843 71,5
Error in line 14: w8oILeLwV S648 7,8
